gcc-defaults (1.38) UNRELEASED; urgency=low

  * Set section of -doc packages to doc.

 -- Matthias Klose <doko@debian.org>  Thu,  6 Jul 2006 03:18:27 +0200

gcc-defaults (1.37) unstable; urgency=medium

  [Ludovic Brenta]
  * Provide a gnat package that depends on the default Ada compiler.
  * Update README.Debian for gnat, gfortran.  Simplify it.
  * debian/rules: reorder architectures alphabetically for future
    maintainability.  Clean up the way we exclude some languages
    on some architectures.  Disable Ada on m68k and GNU/Hurd, in
    addition to GNU/NetBSD, SH3 and SH4 targets.
  * debian/control (gnat): depend on cpp.

  [Matthias Klose]
  * Build a gnat-doc package.
  * Remove chill from the control file.
  * gcj: Add a /usr/share/java/libgcj.jar symlink.

 -- Matthias Klose <doko@debian.org>  Tue,  4 Jul 2006 23:52:43 +0200
	
gcc-defaults (1.36) unstable; urgency=medium

  * Make gcc-4.1 the default C compiler, g++-4.1 the default C++ compiler,
    gobjc-4.1 the default ObjC compiler, treelang-4.1 the default Treelang
    compiler, gfortran-4.1 the default Fortran compiler.
    Closes: #366820.
  * Don't build the chill package anymore.
  * Build-depend on gcj-4.1-base, instead of gcc-4.0-base. Closes: #367952.

 -- Matthias Klose <doko@debian.org>  Tue,  6 Jun 2006 03:10:08 +0200

gcc-defaults (1.35) unstable; urgency=low

  * Make gij-4.1/gcj-4.1 the default gij/gcj.
  * gij: Add a conflict to java-gcj-compat (<< 1.0.56).
  * Fix typo in gpc package description (closes: #363619).
  * gobjc++: Recommend g++ and gobjc.
  * Handle c89/c99 binaries by alternatives (closes: #365039).

 -- Matthias Klose <doko@debian.org>  Sun,  7 May 2006 11:09:59 +0200

gcc-defaults (1.34) unstable; urgency=low

  * Fix typo in debian/rules.

 -- Matthias Klose <doko@debian.org>  Sun,  2 Apr 2006 13:46:30 +0000

gcc-defaults (1.33) unstable; urgency=low

  * Add gobjc++ package.
  * Build-Depend on gcc-4.1-base.
